<resources>
    <string name="author_name">\@akmsw</string>
    <string name="app_name">armame el doparti</string>
    <string name="app_version">1.0.0</string>
    <string name="app_icon_description">app logo</string>
    <string name="activity_main_menu_button_start">comenzar</string>
    <string name="activity_main_menu_button_help">ayuda</string>
    <string name="activity_main_menu_button_issues">reportes y sugerencias</string>
    <string name="activity_names_input_title">ingreso de jugadores</string>
    <string name="activity_names_input_label_cd">defensores centrales</string>
    <string name="activity_names_input_label_ld">defensores laterales</string>
    <string name="activity_names_input_label_mf">mediocampistas</string>
    <string name="activity_names_input_label_fw">delanteros</string>
    <string name="activity_names_input_label_gk">arqueros</string>
    <string name="activity_names_input_hint_edit_text">nombre</string>
    <string name="activity_names_input_button_continue">continuar</string>
    <string name="activity_names_input_button_back">atrás</string>
    <string name="activity_results_title">resultado</string>
    <string name="activity_results_label_team_1">equipo 1</string>
    <string name="activity_results_label_team_2">equipo 2</string>
    <string name="dialog_button_ok">ok</string>
    <string name="dialog_button_continue">continuar</string>
    <string name="dialog_title_error">error</string>
    <string name="dialog_distribution_option_random">aleatoriamente</string>
    <string name="dialog_distribution_option_by_skill_points">por puntajes</string>
    <string name="dialog_distribution_option_enable_anchorages">anclar jugadores</string>
    <string name="dialog_distribution_title">distribución</string>
    <string name="dialog_distribution_description">cómo vas a repartir los jugadores?</string>
    <string name="dialog_warning_title">advertencia</string>
    <string name="dialog_warning_name_empty">los nombres de los jugadores no pueden estar vacíos</string>
    <string name="dialog_warning_name_numeric_string">todos los nombres de los jugadores deben tener al menos una letra de la A a la Z</string>
    <string name="dialog_warning_name_special_characters">los nombres de los jugadores no pueden contener caracteres especiales</string>
    <string name="dialog_warning_name_already_exists">no puede haber dos jugadores con el mismo nombre</string>
</resources>