<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_light"
    tools:context="armameeldopartimobile.activities.MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <ImageView
        android:id="@+id/app_icon_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:contentDescription="@string/app_icon_description"
        android:src="@drawable/bg"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ImageContrastCheck" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/app_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:clickable="false"
        android:fontFamily="@font/comfortaa"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/green_dark"
        android:textSize="38sp"
        app:layout_constraintEnd_toEndOf="@+id/app_icon_image"
        app:layout_constraintStart_toStartOf="@+id/app_icon_image"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/author_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comfortaa"
        android:text="@string/author_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:clickable="false"
        app:layout_constraintEnd_toEndOf="@+id/app_name_label"
        app:layout_constraintStart_toStartOf="@+id/app_name_label"
        app:layout_constraintTop_toBottomOf="@+id/app_name_label"
        tools:ignore="TextContrastCheck" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/app_version_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comfortaa"
        android:text="@string/app_version"
        android:textAlignment="center"
        android:textColor="@color/green_dark_medium"
        android:textSize="20sp"
        android:clickable="false"
        app:layout_constraintBottom_toBottomOf="@+id/author_label"
        app:layout_constraintEnd_toEndOf="@+id/app_name_label"
        app:layout_constraintTop_toBottomOf="@+id/app_name_label" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/start_button"
        android:text="@string/activity_main_menu_button_start"
        android:onClick="launchNamesInputActivity"
        style="@style/CustomButtonStyle"
        app:layout_constraintBottom_toTopOf="@+id/help_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="VisualLintButtonSize" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/help_button"
        android:text="@string/activity_main_menu_button_help"
        style="@style/CustomButtonStyle"
        app:layout_constraintBottom_toTopOf="@+id/issues_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="VisualLintButtonSize" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/issues_button"
        android:text="@string/activity_main_menu_button_issues"
        style="@style/CustomButtonStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="VisualLintButtonSize" />

</androidx.constraintlayout.widget.ConstraintLayout>