<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_light"
    tools:context="armameeldopartimobile.activities.NamesInputActivity">

    <ImageView
        android:id="@+id/app_icon_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:clickable="false"
        android:contentDescription="@string/app_icon_description"
        android:src="@drawable/bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/activity_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:clickable="false"
        android:fontFamily="@font/comfortaa"
        android:text="@string/activity_results_title"
        android:textAlignment="center"
        android:textColor="@color/green_dark"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/app_icon_image"
        app:layout_constraintStart_toEndOf="@+id/app_icon_image"
        app:layout_constraintTop_toTopOf="@+id/app_icon_image" />

    <View
        android:id="@+id/divider"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_marginTop="15dp"
        android:background="@color/green_medium"
        android:clickable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_title" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label_team_1"
        style="@style/CustomLabelStyle"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:textAlignment="viewStart"
        android:text="@string/activity_results_label_team_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/back_button"
        style="@style/CustomButtonStyle"
        android:text="@string/activity_names_input_button_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="VisualLintButtonSize" />

</androidx.constraintlayout.widget.ConstraintLayout>